autocommit
Took 54 minutes